- TLS v1.1 now not enabled by default. It is still possible to explicitly
  choose TLS v1.1, but this is not recommended and will be removed in a future
  version.
- Add -q option to allow logging to be disabled at the command line.
- Add suport for PROXY protocol v1 and v2.
- Log message if a client attempts to connect with TLS to a non-TLS listener.

Plugins / plugin interface:
- Add persist-sqlite plugin.
- Add sparkplug aware plugin.
- Add support for modifying outgoing messages using MOSQ_EVT_MESSAGE_OUT.
- Add mosquitto_client() function for retrieving a client struct if that
  client is connected.
- Add MOSQ_ERR_PLUGIN_IGNORE to allow plugins to register basic auth or acl
  check callbacks, but still act as though they are not registered. A plugin
  that wanted to act as a blocklist for certain usernames, but wasn't carrying
  out authentication could return MOSQ_ERR_PLUGIN_IGNORE for usernames not on
  its blocklist. If no other plugins were configured, the client would be
  authenticated. Using MOSQ_ERR_PLUGIN_DEFER instead would mean the clients
  would be denied if no other plugins were configured.
- Add `mosquitto_client_port()` function for plugins.
- Add MOSQ_EVT_CONNECT, to allow plugins to know when a client has
  successfully authenticated to the broker.
- Add connection-state example plugin to demonstrate MOSQ_EVT_CONNECT.
- Add MOSQ_EVT_CLIENT_OFFLINE, to allow plugins to know when a client with a
  non-zero session expiry interval has gone offline.
- Plugins on non-Windows platforms now no longer make their symbols globally
  available, which means they are self contained.
- Add support for delayed basic authentication in plugins.
- Plugins using the MOSQ_EVT_MESSAGE_WRITE callback can now return
  MOSQ_ERR_QUOTA_EXCEEDED to have the message be rejected. MQTT v5 clients
  using QoS 1 or 2 will receive the quota-exceeded reason code in the
  corresponding PUBACK/PUBREC.