@@ -20,11 +20,11 @@
 # affected:
 #
 # acl_file
-# allow_anonymous
+# allow_anonymous - use listener_allow_anonymous instead
 # allow_zero_length_clientid
 # auto_id_prefix
 # password_file
-# plugin
+# plugin - use plugin_load and plugin_use instead
 # plugin_opt_*
 # psk_file
 #
@@ -317,6 +317,13 @@
 #
 # Defaults to allowing all versions.
 #accept_protocol_versions 3,4,5
+
+# If you wish to allow unauthenticated connections for a specific listener, use
+# the listener_allow_anonymous option set to true. If not set, the value
+# determined by the global allow_anonymous option will be used. If
+# listener_allow_anonymous is set at the same time as allow_anonymous, the
+# value set by listener_allow_anonymous will always take priority.
+#listener_allow_anonymous
 
 # Set use_username_as_clientid to true to replace the clientid that a client
 # connected with with its username. This allows authentication to be tied to
