@@ -12,6 +12,7 @@ tests = [
     (1, './01-connect-disconnect-v5.py'),
     (1, './01-connect-global-max-clients.py'),
     (1, './01-connect-global-max-connections.py'),
+    (2, './01-connect-listener-allow-anonymous.py'),
     (1, './01-connect-max-connections.py'),
     (1, './01-connect-max-keepalive.py'),
     (1, './01-connect-take-over.py'),
